# GTA-God

./: .dockerignore  .gitattributes  .gitignore  CLIENT.md  Caddyfile.l4.example  Caddyfile.reality.example  Caddyfile.singbox.example  Dockerfile  FRIEND-GUIDE.md  README.md  build-and-push.sh  certificate-health-lib.sh  docker-entrypoint.sh  gtacore-watchdog.sh  gtagod.conf.example  healthcheck.sh  run.sh  setup-warp.sh  singbox-config.anyreality-combo.example  singbox-config.anyreality.example  singbox-config.anytls-combo.example  singbox-config.anytls.example  singbox-config.json.example  singbox-config.l4.example  singbox-config.naive.example  v2god.conf.example
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: architect.agent.md  code-reviewer.agent.md  container-devops-engineer.agent.md  dependency-modernization-engineer.agent.md  deployment-script-engineer.agent.md  docs-memory-curator.agent.md  gate-reviewer.agent.md  gateway-engineer.agent.md  performance-engineer.agent.md  planner.agent.md  pm-orchestrator.agent.md  qa-config-validation-engineer.agent.md  release-retro.agent.md  security-supplychain-auditor.agent.md
.github/instructions/: anti-overengineering.instructions.md  anti-sycophancy.instructions.md  docker-shell.instructions.md  powershell.instructions.md
.github/prompts/: pm-orchestrate.prompt.md
.github/skills/: PROVENANCE.md
.github/skills/agent-owasp-compliance/: SKILL.md
.github/skills/conventional-commit/: SKILL.md
.github/skills/network-troubleshoot/: SKILL.md
.github/workflows/: codeql.yml  docker-build.yml  rust-quality.yml
gateway/: Cargo.toml
gateway/.cargo/: config.toml
gateway/src/: config.rs  dispatch.rs  main.rs  sni.rs
gateway/src/acme/: cloudflare.rs  mod.rs  store.rs
tests/: container-data-path.sh  gateway-stress.sh  protocol-matrix.sh  shell-behavior.sh  verify-release-artifact.sh
tests/fixtures/: gtacore-nine-axis.json  gtacore-smoke.json  gtagate-smoke.json
要上传服务器/: setup-warp.sh
